moved admin buttons up on smaller screen to stop going over 100vh

--- a/src/App.css
+++ b/src/App.css
@@ -216,7 +216,6 @@ form {
   display: flex;
   width : 100%;
   justify-content: center;
-  margin-top : 1vh;
 }
 
 .camHeader {
